versioned_docs/version-11.1.0/getting-started/organize-and-submit-sparc-datasets-with-soda.md
---
sidebar_position: 1
title: Step-by-step guide for curating and sharing data
image: https://og.fairdataihub.org/api/ogimage?app=soda-for-sparc&title=Step-by-step%20guide%20to%20organize%20and%20submit%20SPARC%20datasets%20with%20SODA%20for%20SPARC&description=Getting%20Started
---

### A. Initial inquiry

:::info
If the dataset you want to share is funded through an award from the [NIH SPARC program](https://commonfund.nih.gov/sparc) or the [NIH RE-JOIN program](https://heal.nih.gov/research/preclinical-translational/restoring-joint-health-function-reduce-pain), skip this step and move directly to step B.
:::

If you want to share a dataset that is not funded through an award from the NIH SPARC program or the NIH RE-JOIN program, start with reaching out via email to the SPARC Curation Team (curation@sparc.science). Include briefly some information about the data you want to share and the SPARC Curation Team will follow up with you regarding the suitability of your data for the SPARC data portal. If the data is deemed suitable for the SPARC Data Portal, you will be invited to proceed to the next steps.

### B. Preliminary steps

These steps only need to be completed once.

- All SPARC datasets must be uploaded on the Pennsieve data management platform. Get access to Pennsieve as well as the required Pennsieve workspace by filling out [this form](https://www.wrike.com/frontend/requestforms/index.html?token=eyJhY2NvdW50SWQiOjMyMDM1ODgsInRhc2tGb3JtSWQiOjUwMzQzN30JNDgwNTg4NjU3MjA3Nwk0MTg5ZTY0ODEyZGYxNTU1ZDJkYmU5MzIxNWZiNTQyZWUwZTMzY2U4NDQ5ODI0ZWI0YzZiMWZhNjVhYzgyOTRm). If you are sharing a dataset funded by the NIH RE-JOIN program, request access to the RE-JOIN workspace, otherwise request access to the SPARC workspace.
- Download and install the [Pennsieve agent](https://docs.pennsieve.io/docs/uploading-files-programmatically#1-installing-the-pennsieve-agent) required to upload files on Pennsieve through SODA.
- <a href="../getting-started/download-soda" target="\_blank"> Download and install SODA </a>

### C. Curate and share data with SODA

We suggest to use the `End to End Curation` mode of SODA as it is the easiest approach for submitting your dataset. This mode is designed to guide users step-by-step through all the requirements for preparing and sharing datasets with the SPARC Curation Team according to the SPARC data curation and guidelines. The user interfaces are designed to include all the necessary information such that no documentation or prior knowledge of the SPARC data curation and sharing guidelines should be needed. Follow the associated documentation [here](../guided).

If you are making only few changes to an existing dataset (for example based on feedback from the SPARC Curation Team), you can use the `Free Form Curation` mode. This mode provides various feature for creating/editing individual compoenents of a dataset. Follow the associated documentation [here](../Freeform%20Mode/overview).

### Need help?

Feel free to reach out to us if you need help or want to share feedback at help@fairdataihub.org. Make sure to check the "Common errors and their solutions" section in this document, your solution might be there!

import PageFeedback from '@site/src/components/PageFeedback';

<PageFeedback />
